# PassMan2

./: db_manager.py  gui.py  main.py  password_generator.py  passwords.db  pyproject.toml  requirements.txt
src/: main.py
src/database/: dbManager.py  dbModels.py
src/utils/: dbManager.py  models.py  passwordManager.py
src/worker/: gui.py  requestListener.py
src/worker/gui/: app.py
utils/: dbManager.py
worker/: gui.py
