[tool.poetry]
name = "passman2-3"
version = "0.1.0"
description = ""
authors = ["U007U <119404723+U007U@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "passman2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
